Fix docker file

--- a/backend/cmd/my_vocabs/Dockerfile
+++ b/backend/cmd/my_vocabs/Dockerfile
@@ -8,6 +8,7 @@ COPY go.mod go.sum ./
 RUN --mount=type=cache,target=/go/pkg/mod go mod download -x
 
 COPY ./cmd/my_vocabs ./
+COPY ./internal/my_vocabs ./internal/my_vocabs
 RUN --mount=type=cache,target=/go/pkg/mod go build -o main .
 
 # Stage 2: Execute binary
@@ -16,5 +17,6 @@ FROM gcr.io/distroless/base-nossl-debian12:latest
 WORKDIR /root/
 
 COPY --from=builder /app/main .
+COPY --from=builder /app/app.env .
 CMD ["./main"]
 EXPOSE 8080
