--- a/backend/Makefile
+++ b/backend/Makefile
@@ -8,19 +8,19 @@ restart-vocabs:
 
 # Using curl to test API on local
 local-add-word:
-	curl -X POST http://localhost:8080/api/v1/words/add -d '{"word": "$w"}'
+	curl -X POST http://localhost:8080/api/v1/vocabs/add -d '{"word": "$w"}'
 local-list-word:
-	curl http://localhost:8080/api/v1/words/review
+	curl http://localhost:8080/api/v1/vocabs/review
 local-mark-complete:	
-	curl -X POST http://localhost:8080/api/v1/words/complete -d '{"word": "$w"}'
+	curl -X POST http://localhost:8080/api/v1/vocabs/complete -d '{"word": "$w"}'
 
 # Using curl to test API on local
 add-word:
-	curl -X POST ${BASE_URL}/api/v1/words/add -d '{"word": "$w"}'
+	curl -X POST ${BASE_URL}/api/v1/vocabs/add -d '{"word": "$w"}'
 list-word:
-	curl ${BASE_URL}/api/v1/words/review
+	curl ${BASE_URL}/api/v1/vocabs/review
 mark-complete:	
-	curl -X POST ${BASE_URL}/api/v1/words/complete -d '{"word": "$w"}'
+	curl -X POST ${BASE_URL}/api/v1/vocabs/complete -d '{"word": "$w"}'
 
 # BUild & deploy
 build:
@@ -31,3 +31,12 @@ deploy:
 	--platform managed \
 	--region us-central1 \
 	--allow-unauthenticated
+
+# drop-db:
+# 	docker exec -it postgres_db dropdb -U nhinlee my_vocabs
+
+migrate-up:
+	migrate -path ./internal/my_vocabs/db/migrations -database "postgresql://nhinlee:123456@localhost:5432/my_vocabs?sslmode=disable" -verbose up
+
+access-db:
+	docker exec -it postgres_db psql -U nhinlee -d postgres
