--- a/backend/cmd/my_vocabs/app.env
+++ b/backend/cmd/my_vocabs/app.env
@@ -1,3 +1,3 @@
 DB_DRIVER=postgres
-DB_SOURCE=postgresql://root:nhin123456@localhost:5432/habits?sslmode=disable
+DB_SOURCE="user=nhinlee password=123456 dbname=my_vocabs host=db port=5432 sslmode=disable"
 HTTP_SERVER_ADDRESS=0.0.0.0:8080
