--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -21,7 +21,8 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - GIN_MODE=release
+      GIN_MODE: release
+      DB_SOURCE_SECRET: "user=nhinlee password=123456 dbname=my_vocabs host=db port=5432 sslmode=disable"
     restart: unless-stopped
     depends_on:
       - db
