--- a/backend/cmd/my_vocabs/app.env
+++ b/backend/cmd/my_vocabs/app.env
@@ -1,3 +1,5 @@
 DB_DRIVER=postgres
 DB_SOURCE=${DB_SOURCE_SECRET}
+GSA_KEY=${GSA_KEY_SECRET}
+GSA_EMAIL=lla-app@lla-app-395103.iam.gserviceaccount.com
 HTTP_SERVER_ADDRESS=0.0.0.0:8080
